# pyarachnecdl

./: .gitignore  .pylintrc  README.md  pyarachnecdl.spec  pyproject.toml  setup.py
.tito/: tito.props
.tito/templates/: version.py.template
src/: arachnecdl
src/pyarachnecdl/: __main__.py  about_dialog.py  arachne_config_downloader.py  network_manager_connection.py  settings.py  settings_dialog.py
