[project]
name = "pyarachnecdl"
version = "0.1"
authors = [
  {name = "Claad Nieslony", email = "github@nieslony.at"},
]
readme = "README.md"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/nieslony/pyarachnecdl.git"

[project.gui-scripts]
arachnecdl-gui = "pyarachnecdl.arachne_config_downloader:main"

[project.optional-dependencies]
gui = ["PyQt6"]

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module'
]
